--- a/config/database.yml
+++ b/config/database.yml
@@ -5,6 +5,8 @@ development:
   pool: 5
   username: blenno
   password: 123456
+  host: localhost
+  port: 5432
 
 test:
   adapter: postgresql
@@ -13,6 +15,8 @@ test:
   pool: 5
   username: blenno
   password: 123456
+  host: localhost
+  port: 5432
 
 production:
   adapter: postgresql
